Dashboard Spacing issues

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,7 +1,8 @@
+@import "../src/components/styles/Core/config";
 .root_Container {
   // width: 100%;
   // height: 84%;
-  padding-top: 1rem;
+  padding: 30px 30px 6px;
   // display: flex;
   // justify-content: flex-start;
   // align-items: center;
@@ -15,6 +16,13 @@
     // flex-wrap: wrap;
     // width: 100%
   // }
+    @include respond(phone) {
+        padding: 15px 15px 6px;        
+    }
+    .dashboardPadding {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
     .bottom_Container {
       // margin-top: 1rem;
       // height: 100%;
